testsuite/tests/deriving/should_fail/drvfail006.stderr

drvfail006.hs:9:45: error: [GHC-73993]
    • ‘MonadState’ is not a unary constraint, as expected by a `deriving' clause
    • In the newtype declaration for ‘T’
